# binance-predict

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.qoder/agents/: business-analyst.md
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_sentiment_agent_loop_tables.py  b2c3d4e5f6a7_drop_path_a_tables.py  c3d4e5f6a7b8_add_llm_traces_table.py  c3d4e5f6a7b8_add_pattern_discovery_method_holdout.py  d4e5f6a7b8c9_add_health_snapshots_table.py  e5f6a7b8c9d0_add_pattern_discovery_method_holdout.py
docker/: backend.Dockerfile  docker-compose.bt-host-pg.yml  docker-compose.bt.yml  docker-compose.prod.yml  frontend.Dockerfile  nginx-bt.conf  nginx.conf
docs/prd/: v1.md  v2.md  v3.md
docs/superpowers/plans/: 2026-07-10-runtime-safety-and-dead-code-cleanup.md
docs/superpowers/specs/: 2026-07-10-runtime-safety-and-dead-code-cleanup-design.md
frontend/: package-lock.json  pnpm-lock.yaml
frontend/src/: App.tsx
scripts/: agent_health.py  deploy.sh
src/binance_predict/: __init__.py  main.py
src/binance_predict/config/: settings.py
src/binance_predict/db/: engine.py  models.py
tests/: conftest.py  test_agent_trade_gate.py  test_alert_notifier.py  test_bug_condition_exploration.py  test_compare_summary.py  test_data_collector_cleanup.py  test_deep_learn_kernel.py  test_evolution_metrics.py  test_evolving_promotion.py  test_health_metrics.py  test_low_sample_archive.py  test_path_a_cleanup.py  test_preservation_properties.py  test_risk_control_loss_streak.py
(+19 files in other folders)
