[project]
name = "binance-predict"
version = "0.1.0"
description = "BTC 5min LLM 全自动预测系统 V2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Web 框架 ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # --- 数据库 ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # --- LLM 结构化输出 ---
    "instructor>=1.7.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.50.0",
    # --- Binance API ---
    # websockets 16.x 有 breaking change（移除 ClientConnection.recv_messages），锁定 13.x
    "websockets>=13.0,<14.0",
    "httpx>=0.27.0",
    # --- 工具 ---
    "loguru>=0.7.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/binance_predict"]
